--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
    <name>my-demo</name>
 
    <properties>
-      <maven.compiler.source>17</maven.compiler.source>
-      <maven.compiler.target>17</maven.compiler.target>
+<!--      <maven.compiler.source>17</maven.compiler.source>-->
+<!--      <maven.compiler.target>17</maven.compiler.target>-->
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <poi.version>5.2.3</poi.version>
    </properties>
@@ -67,5 +67,22 @@
 
       </dependencies>
    </dependencyManagement>
+
+
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version>
+            <configuration>
+               <source>11</source>
+               <target>11</target>
+               <encoding>UTF-8</encoding>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
+
 
 </project>
